@@ -6,13 +6,16 @@
 
 #define MAX_SORTSIZE (BUFFER_LEN / 2)  /**< Maximum number of elements to sort */
 
-char *autodetect_list(char **ptrs, int nptrs);
-char *get_list_type(char *args[], int nargs, int type_pos, char *ptrs[],
+typedef char * SortType;
+
+SortType autodetect_list(char **ptrs, int nptrs);
+SortType autodetect_2lists(char *ptrs[], int nptrs, char *ptrs2[], int nptrs2);
+SortType get_list_type(char *args[], int nargs, int type_pos, char *ptrs[],
                     int nptrs);
-char *get_list_type_noauto(char *args[], int nargs, int type_pos);
-int gencomp(dbref player, char *a, char *b, char *sort_type);
+SortType get_list_type_noauto(char *args[], int nargs, int type_pos);
+int gencomp(dbref player, char *a, char *b, SortType sort_type);
 void do_gensort(dbref player, char *keys[], char *strs[], int n,
-                char *sort_type);
+                SortType sort_type);
 /** Type definition for a qsort comparison function */
 typedef int (*comp_func) (const void *, const void *);
 void sane_qsort(void **array, int left, int right, comp_func compare);
